--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,25 @@
         content="Free passive income calculator and goal tracker. Plan your financial independence with dividend investing, rental income, and multiple income streams. Track your path to financial freedom.">
     <meta name="keywords"
         content="passive income calculator, financial independence, dividend income tracker, rental income planner, FIRE calculator, financial freedom, retirement planning, investment goal tracker">
+    <!-- SEO: Canonical and Robots -->
+    <link rel="canonical" href="https://your-domain.com/">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Passive Income Goal Tracker">
+    <meta property="og:description"
+        content="Plan and track your journey to financial independence with dividends, rentals, and more.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:image" content="https://your-domain.com/og-image.png">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Passive Income Goal Tracker">
+    <meta name="twitter:description"
+        content="Plan and track your journey to financial independence with dividends, rentals, and more.">
+    <meta name="twitter:image" content="https://your-domain.com/og-image.png">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -194,6 +213,9 @@
                                 min="0" max="100" step="0.1">
                             <button class="btn-secondary" onclick="addTicker()">Add</button>
                         </div>
+                        <p class="input-hint" style="margin-top: 8px; color: var(--muted, #6b7280);">
+                            Note: We currently support a limited set of ticker symbols. Full coverage coming soon.
+                        </p>
                     </div>
 
                     <div id="tickerList" class="ticker-list"></div>
@@ -288,7 +310,7 @@
         <!-- Step 5: Monthly Expenses -->
         <div class="step" id="step5">
             <div class="step-content">
-                <h1>Monthly Expenses</h1>
+                <h1>✓ Monthly Expenses</h1>
                 <p class="subtitle">List all your essential monthly expenses</p>
 
                 <div class="expenses-section">
@@ -322,14 +344,34 @@
         <div class="step" id="step6">
             <div class="step-content">
                 <div class="calculating-container">
-                    <div class="spinner"></div>
-                    <h1>Setting Up Your Goals</h1>
+                    <div class="spinner" id="calcSpinner"></div>
+                    <h1 id="calcHeader">Setting Up Your Goals</h1>
                     <p class="calculating-text">Analyzing your income streams and expenses...</p>
                     <div class="calculating-steps">
-                        <div class="calc-step" id="calcStep1">✓ Calculating total passive income</div>
-                        <div class="calc-step" id="calcStep2">✓ Sorting expenses by priority</div>
-                        <div class="calc-step" id="calcStep3">✓ Creating milestone tiers</div>
-                        <div class="calc-step" id="calcStep4">✓ Determining progress</div>
+                        <div class="calc-step" id="calcStep1" style="display:none;">✓ Calculating total passive income
+                        </div>
+                        <div class="calc-step" id="calcStep2" style="display:none;">✓ Sorting expenses by priority</div>
+                        <div class="calc-step" id="calcStep3" style="display:none;">✓ Creating milestone tiers</div>
+                        <div class="calc-step" id="calcStep4" style="display:none;">✓ Determining progress</div>
+                        <div class="calc-step" id="calcStep5" style="display:none;">✓ Creating goals</div>
+                    </div>
+
+                    <!-- Lightweight signup CTA (non-primary styling) -->
+                    <div class="info-banner" id="signupBanner"
+                        style="display:none; margin-top:16px; padding:12px 14px; border:1px solid rgba(0,0,0,0.08); border-radius:10px; background: linear-gradient(0deg, rgba(0,0,0,0.02), rgba(0,0,0,0.02)), #fff; align-items:center; justify-content:space-between; gap:12px;">
+                        <div style="font-size:14px; color:#374151; text-align:left;">
+                            Consider creating a free account to securely save your data and continue later.
+                        </div>
+                        <div style="display:flex; align-items:center; gap:8px;">
+                            <a href="/signup"
+                                style="font-size:14px; padding:8px 16px; border-radius:8px; border:none; background:#3b82f6; color:#ffffff; text-decoration:none; font-weight:500;">
+                                Create
+                            </a>
+                            <button type="button" onclick="dismissStep6Banner()"
+                                style="font-size:14px; padding:8px 10px; border-radius:8px; border:1px solid rgba(0,0,0,0.12); background:#f9fafb; color:#374151; cursor:pointer;">
+                                Dismiss
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -435,6 +477,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
