minor UI change

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -310,7 +310,7 @@
         <!-- Step 5: Monthly Expenses -->
         <div class="step" id="step5">
             <div class="step-content">
-                <h1>✓ Monthly Expenses</h1>
+                <h1>Monthly Expenses</h1>
                 <p class="subtitle">List all your essential monthly expenses</p>
 
                 <div class="expenses-section">
