added a scroll indicator

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,6 +71,11 @@
                     </button>
 
                     <p class="landing-note">No signup required • 100% free • Your data stays private</p>
+
+                    <div class="scroll-indicator">
+                        <span class="scroll-text">Or scroll to see how it works</span>
+                        <span class="scroll-arrow">↓</span>
+                    </div>
                 </div>
 
                 <div class="landing-benefits">
