sign up button, minor changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -475,6 +475,7 @@
 
                 <!-- Action Button -->
                 <div class="dashboard-actions">
+                    <a href="/signup" class="btn-primary">Sign Up</a>
                     <button class="btn-secondary" onclick="resetApp()">Start Over</button>
                 </div>
             </div>
