styling changes AI chatbot

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -509,12 +509,12 @@
 
     <!-- AI Chatbot Widget -->
     <div class="chatbot-container" id="chatbotContainer">
-        <div class="chatbot-header">
+        <div class="chatbot-header" onclick="toggleChatbot()">
             <div class="chatbot-title">
                 <span class="chatbot-icon">🤖</span>
                 <span>AI Assistant</span>
             </div>
-            <button class="chatbot-minimize" onclick="toggleChatbot()">−</button>
+            <button class="chatbot-minimize">−</button>
         </div>
         <div class="chatbot-body" id="chatbotBody">
             <div class="chatbot-messages" id="chatbotMessages">
