animated buttons for CTA

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,6 +78,27 @@
                     </div>
                 </div>
 
+                <div class="landing-how-it-works">
+                    <h2>How It Works</h2>
+                    <div class="steps-preview">
+                        <div class="step-preview-card">
+                            <div class="step-number">1</div>
+                            <h4>Add Income Sources</h4>
+                            <p>Enter your dividend stocks, rental properties, and other passive income streams</p>
+                        </div>
+                        <div class="step-preview-card">
+                            <div class="step-number">2</div>
+                            <h4>List Your Expenses</h4>
+                            <p>Add monthly expenses—we'll automatically create goals from them</p>
+                        </div>
+                        <div class="step-preview-card">
+                            <div class="step-number">3</div>
+                            <h4>Track Your Goals</h4>
+                            <p>See auto-generated milestones and exact investment amounts needed to achieve them</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="landing-benefits">
                     <div class="benefit-card">
                         <div class="benefit-card-icon">✨</div>
@@ -99,27 +120,6 @@
                         <h3>See Exactly What to Invest</h3>
                         <p>Know precisely how much portfolio value you need to reach each milestone.
                             Clear investment targets based on your actual dividend yield—no guesswork required.</p>
-                    </div>
-                </div>
-
-                <div class="landing-how-it-works">
-                    <h2>How It Works</h2>
-                    <div class="steps-preview">
-                        <div class="step-preview-card">
-                            <div class="step-number">1</div>
-                            <h4>Add Income Sources</h4>
-                            <p>Enter your dividend stocks, rental properties, and other passive income streams</p>
-                        </div>
-                        <div class="step-preview-card">
-                            <div class="step-number">2</div>
-                            <h4>List Your Expenses</h4>
-                            <p>Add monthly expenses—we'll automatically create goals from them</p>
-                        </div>
-                        <div class="step-preview-card">
-                            <div class="step-number">3</div>
-                            <h4>Track Your Goals</h4>
-                            <p>See auto-generated milestones and exact investment amounts needed to achieve them</p>
-                        </div>
                     </div>
                 </div>
 
@@ -153,14 +153,14 @@
         <!-- Step 1: Passive Income Explanation -->
         <div class="step" id="step1">
             <div class="step-content">
-                <h1>What is Passive Income?</h1>
+                <h1>Understanding Passive Income</h1>
                 <div class="explanation-box">
                     <p class="lead">Passive income is money earned regularly without actively working for it. The key
                         principle:</p>
                     <div class="highlight-box">
                         <h3>Your Corpus Remains Intact</h3>
                         <p>You never need to sell your investments. Instead, they generate fixed income for life through
-                            dividends, interest, rent, or royalties.</p>
+                            dividends, interest, rent, or royalties. Ask our AI Assistant for more details.</p>
                     </div>
                     <div class="benefits-grid">
                         <div class="benefit-item">
