--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,7 +126,7 @@
                 <div class="landing-cta-section">
                     <h2>Start Your Financial Independence Journey Today</h2>
                     <p>Join thousands planning their path to financial freedom through passive income</p>
-                    <button class="btn-cta" onclick="startBuilder()">
+                    <button class="btn-cta btn-cta-pulse" onclick="startBuilder()">
                         Launch Goal Tracker
                         <span class="cta-arrow">→</span>
                     </button>
@@ -403,7 +403,7 @@
                         </div>
                     </div>
 
-                    <button class="btn-primary" onclick="nextStep()">View Dashboard →</button>
+                    <button class="btn-primary btn-cta-pulse" onclick="nextStep()">View Dashboard →</button>
                 </div>
             </div>
         </div>
