--- a/frontend/index.html
+++ b/frontend/index.html
@@ -360,7 +360,7 @@
                     <div class="info-banner" id="signupBanner"
                         style="display:none; margin-top:16px; padding:12px 14px; border:1px solid rgba(0,0,0,0.08); border-radius:10px; background: linear-gradient(0deg, rgba(0,0,0,0.02), rgba(0,0,0,0.02)), #fff; align-items:center; justify-content:space-between; gap:12px;">
                         <div style="font-size:14px; color:#374151; text-align:left;">
-                            Create an account to save your plan & unlock next steps.
+                            Save Your Plan & Unlock Next Steps.
                         </div>
                         <div style="display:flex; align-items:center; gap:8px;">
                             <a href="/signup"
@@ -508,7 +508,7 @@
     </div>
 
     <!-- AI Chatbot Widget -->
-    <div class="chatbot-container" id="chatbotContainer">
+    <div class="chatbot-container minimized" id="chatbotContainer">
         <div class="chatbot-header" onclick="toggleChatbot()">
             <div class="chatbot-title">
                 <span class="chatbot-icon">🤖</span>
