minor ui changes, new metric addition

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -430,6 +430,11 @@
                                 <span class="summary-label">Goals Achieved</span>
                                 <span class="summary-amount" id="dashGoalsAchieved">0/0</span>
                             </div>
+                            <div class="summary-item highlight">
+                                <span class="summary-label">FI Progress</span>
+                                <span class="summary-amount" id="dashFIPercentage">0%</span>
+                                <div class="summary-breakdown">of expenses covered</div>
+                            </div>
                         </div>
                     </div>
                 </div>
